tests/rawptr_implicit_from_ptr_bad.stderr
tests/rawptr_implicit_from_ptr_bad.hop:4:17: error: HOP2004: type mismatch: cannot use 'p' of type *int as rawptr
