tests/rawptr_implicit_from_ptr_bad.hop
fn main() {
	var i        = 123
	var p *int   = &i
	var x rawptr = p
	_ = x
}
